--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gamjafarm_react",
+  "name": "potato_farm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "firebase": "^10.11.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
     "styled-components": "^6.1.8",
+    "toolkit": "^1.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
